// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Metadata component correctly 1`] = `
<ul
  className="css-ikceif e1316sc0"
>
  <li
    className="css-160243x e1316sc1"
  >
    分類：
    <ul
      className="css-nikw9o e1316sc2"
    >
      <li
        className="css-9yllw7 e1316sc3"
      >
        <a
          className="css-f04ql"
          href="/articles/category/slug"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          name
        </a>
      </li>
      <li
        className="css-9yllw7 e1316sc3"
      >
        <a
          className="css-f04ql"
          href="/articles/category/slug2"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          name2
        </a>
      </li>
    </ul>
  </li>
  <li
    className="css-160243x e1316sc1"
  >
    字數：
    <img
      alt="雞"
      className="css-3zjnsy e1316sc4"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="/img/chicken.png"
    />
     x 
    1
    <span
      className="css-ks3v3l e1316sc5"
    >
      雞數：計算文長的常見計量單位，一般而言數字大小與文章長度呈正相關
    </span>
  </li>
</ul>
`;

exports[`It should render Metadata component correctly when target article has been modified 1`] = `
<ul
  className="css-ikceif e1316sc0"
>
  <li
    className="css-160243x e1316sc1"
  >
    分類：
    <ul
      className="css-nikw9o e1316sc2"
    >
      <li
        className="css-9yllw7 e1316sc3"
      >
        <a
          className="css-f04ql"
          href="/articles/category/slug"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          name
        </a>
      </li>
    </ul>
  </li>
  <li
    className="css-160243x e1316sc1"
  >
    字數：
    <img
      alt="雞"
      className="css-3zjnsy e1316sc4"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      src="/img/chicken.png"
    />
     x 
    1
    <span
      className="css-ks3v3l e1316sc5"
    >
      雞數：計算文長的常見計量單位，一般而言數字大小與文章長度呈正相關
    </span>
  </li>
</ul>
`;
